--- a/Neural network for Handwritten digit recognition.ipynb
+++ b/Neural network for Handwritten digit recognition.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-   "# This version of MNIST dataset includes only zeros and ones \n"
+   "# This version of MNIST dataset includes only zeros and ones \n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
