Update Neural network for Handwritten digit recognition.ipynb

--- a/Neural network for Handwritten digit recognition.ipynb
+++ b/Neural network for Handwritten digit recognition.ipynb
@@ -41,8 +41,8 @@
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
     "train_mask = np.isin(y_train, [0, 1])\n",
     "x = x_train[train_mask].reshape(12665,784)\n",
-    "y = y_train[train_mask]\n",
-    "print(x[0].shape)"
+    "y = y_train[train_mask]\n"
+   
    ]
   },
   {
